fix chips to recognize non-file editable fargments