@@ -4,7 +4,6 @@ import io.github.jbellis.brokk.AnalyzerWrapper;
 import io.github.jbellis.brokk.ContextManager;
 import io.github.jbellis.brokk.IConsoleIO;
 import io.github.jbellis.brokk.analyzer.ProjectFile;
-import io.github.jbellis.brokk.context.Context;
 import io.github.jbellis.brokk.context.ContextFragment;
 import io.github.jbellis.brokk.gui.components.MaterialButton;
 import io.github.jbellis.brokk.gui.dialogs.DropActionDialog;
@@ -12,18 +11,7 @@ import io.github.jbellis.brokk.gui.mop.ThemeColors;
 import io.github.jbellis.brokk.gui.util.ContextMenuUtils;
 import io.github.jbellis.brokk.gui.util.Icons;
 import io.github.jbellis.brokk.util.Messages;
-import java.awt.Color;
-import java.awt.Component;
-import java.awt.Container;
-import java.awt.Cursor;
-import java.awt.Dimension;
-import java.awt.FlowLayout;
-import java.awt.Graphics;
-import java.awt.Graphics2D;
-import java.awt.Image;
-import java.awt.Insets;
-import java.awt.Rectangle;
-import java.awt.RenderingHints;
+import java.awt.*;
 import java.awt.datatransfer.DataFlavor;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
@@ -34,17 +22,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
-import javax.swing.Icon;
-import javax.swing.ImageIcon;
-import javax.swing.JComponent;
-import javax.swing.JLabel;
-import javax.swing.JOptionPane;
-import javax.swing.JPanel;
-import javax.swing.JViewport;
-import javax.swing.Scrollable;
-import javax.swing.SwingUtilities;
-import javax.swing.TransferHandler;
-import javax.swing.UIManager;
+import javax.swing.*;
 import javax.swing.border.CompoundBorder;
 import javax.swing.border.EmptyBorder;
 import javax.swing.border.MatteBorder;
@@ -166,13 +144,9 @@ public class WorkspaceItemsChipPanel extends JPanel implements ThemeAware, Scrol
     }
 
     private ChipKind classify(ContextFragment fragment) {
-        Context ctx = contextManager.selectedContext();
         // EDIT: fragments that are in the editable file stream of the currently selected context
-        if (ctx != null) {
-            boolean isEdit = ctx.fileFragments().anyMatch(f -> f == fragment);
-            if (isEdit) {
-                return ChipKind.EDIT;
-            }
+        if (fragment.getType().isEditable()) {
+            return ChipKind.EDIT;
         }
         // SUMMARY: fragments produced by summarize action are Skeletons
         if (fragment.getType() == ContextFragment.FragmentType.SKELETON) {
@@ -289,7 +263,7 @@ public class WorkspaceItemsChipPanel extends JPanel implements ThemeAware, Scrol
 
     private static String buildSummaryLabel(ContextFragment fragment) {
         int n = (int)
-                fragment.files().stream().map(f -> f.toString()).distinct().count();
+                fragment.files().stream().map(ProjectFile::toString).distinct().count();
         return "Summary" + (n > 0 ? " (" + n + ")" : "");
     }
 
@@ -304,7 +278,7 @@ public class WorkspaceItemsChipPanel extends JPanel implements ThemeAware, Scrol
                 String text = fragment.text();
                 int loc = text.split("\\r?\\n", -1).length;
                 int tokens = Messages.getApproximateTokens(text);
-                return "<div><b>Size:</b> " + String.format("%,d", loc) + " LOC \u2022 ~" + String.format("%,d", tokens)
+                return "<div>" + String.format("%,d", loc) + " LOC \u2022 ~" + String.format("%,d", tokens)
                         + " tokens</div><br/>";
             }
         } catch (Exception ignored) {
@@ -315,10 +289,10 @@ public class WorkspaceItemsChipPanel extends JPanel implements ThemeAware, Scrol
 
     private static String buildSummaryTooltip(ContextFragment fragment) {
         var files = fragment.files().stream()
-                .map(f -> f.toString())
+                .map(ProjectFile::toString)
                 .distinct()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
         StringBuilder body = new StringBuilder();
 
@@ -334,13 +308,7 @@ public class WorkspaceItemsChipPanel extends JPanel implements ThemeAware, Scrol
 
         if (files.isEmpty()) {
             // Fallback: if no files are available, show any description as a last resort
-            String d;
-            try {
-                d = fragment.description();
-            } catch (Exception e) {
-                d = fragment.shortDescription();
-            }
-            if (d == null) d = "";
+            String d = fragment.description();
             body.append(StringEscapeUtils.escapeHtml4(d));
         } else {
             body.append("<ul style='margin:0;padding-left:16px'>");
@@ -355,13 +323,7 @@ public class WorkspaceItemsChipPanel extends JPanel implements ThemeAware, Scrol
     }
 
     private static String buildDefaultTooltip(ContextFragment fragment) {
-        String d;
-        try {
-            d = fragment.description();
-        } catch (Exception e) {
-            d = fragment.shortDescription();
-        }
-        if (d == null) d = "";
+        String d = fragment.description();
 
         // Preserve existing newlines as line breaks for readability
         String descriptionHtml = StringEscapeUtils.escapeHtml4(d)
@@ -732,7 +694,7 @@ public class WorkspaceItemsChipPanel extends JPanel implements ThemeAware, Scrol
                                 }
                                 return inside;
                             })
-                            .map(p -> projectRoot.relativize(p))
+                            .map(projectRoot::relativize)
                             .map(rel -> new ProjectFile(projectRoot, rel))
                             .collect(Collectors.toCollection(java.util.LinkedHashSet::new));
 
@@ -762,7 +724,6 @@ public class WorkspaceItemsChipPanel extends JPanel implements ThemeAware, Scrol
                     }
                     switch (selection) {
                         case EDIT -> {
-                            // Only allow editing tracked files; others are silently ignored by editFiles
                             contextManager.submitContextTask(() -> {
                                 contextManager.addFiles(projectFiles);
                             });
